--- a/index.html
+++ b/index.html
@@ -53,7 +53,8 @@
         <p><a href="https://chrome.google.com/webstore/detail/transpose-pitch-loop-for/ioimlbgefgadofblnajllknopjboejda?utm_source=chrome-app-launcher-info-dialog" rel="nofollow">https://chrome.google.com/webstore/detail/transpose-pitch-loop-for/ioimlbgefgadofblnajllknopjboejda?utm_source=chrome-app-launcher-info-dialog</a></p>
         <h1><a id="user-content-unxss" href="#unxss"></a>UnXSS</h1>
         <p><a href="https://chrome.google.com/webstore/detail/unxss/cbjmpjkhiafmdnjnigdbelcnbihgpmge?utm_source=chrome-app-launcher-info-dialog" rel="nofollow">https://chrome.google.com/webstore/detail/unxss/cbjmpjkhiafmdnjnigdbelcnbihgpmge?utm_source=chrome-app-launcher-info-dialog</a></p>
+        <h1><a id="user-content-javascript-and-css-code-beautifier" href="#javascript-and-css-code-beautifier"></a>JavaScript and CSS Code Beautifier</h1>
+        <p><a href="https://chrome.google.com/webstore/detail/javascript-and-css-code-b/iiglodndmmefofehaibmaignglbpdald" rel="nofollow">https://chrome.google.com/webstore/detail/javascript-and-css-code-b/iiglodndmmefofehaibmaignglbpdald</a></p>
     </div>
 </body>
-
 </html>
