--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <p><a href="https://chrome.google.com/webstore/detail/unxss/cbjmpjkhiafmdnjnigdbelcnbihgpmge?utm_source=chrome-app-launcher-info-dialog" rel="nofollow">https://chrome.google.com/webstore/detail/unxss/cbjmpjkhiafmdnjnigdbelcnbihgpmge?utm_source=chrome-app-launcher-info-dialog</a></p>
         <h1><a id="user-content-javascript-and-css-code-beautifier" href="#javascript-and-css-code-beautifier"></a>JavaScript and CSS Code Beautifier</h1>
         <p><a href="https://chrome.google.com/webstore/detail/javascript-and-css-code-b/iiglodndmmefofehaibmaignglbpdald" rel="nofollow">https://chrome.google.com/webstore/detail/javascript-and-css-code-b/iiglodndmmefofehaibmaignglbpdald</a></p>
+        <h1><a id="d3coder" href="#d3coder"></a>d3coder</h1>
+        <p><a href="https://chrome.google.com/webstore/detail/d3coder/gncnbkghencmkfgeepfaonmegemakcol" rel="nofollow">https://chrome.google.com/webstore/detail/d3coder/gncnbkghencmkfgeepfaonmegemakcol</a></p>
     </div>
 </body>
 </html>
