--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <div>
         <h1><a id="user-content-adblock" href="#adblock"></a>AdBlock</h1>
         <p><a href="https://chrome.google.com/webstore/detail/adblock/gighmmpiobklfepjocnamgkkbiglidom?utm_source=chrome-app-launcher-info-dialog" rel="nofollow">https://chrome.google.com/webstore/detail/adblock/gighmmpiobklfepjocnamgkkbiglidom?utm_source=chrome-app-launcher-info-dialog</a></p>
-        <h1><a id="user-content-DownThemAll" href="#MouseTooltipTranslator"></a>DownThemAll!</h1>
-        <p><a href="https://chrome.google.com/webstore/detail/mouse-tooltip-translator/hmigninkgibhdckiaphhmbgcghochdjc</a></p>
+        <h1><a id="user-content-DownThemAll" href="#MouseTooltipTranslator"></a>Mouse Tooltip Translator</h1>
+        <p><a href="https://chrome.google.com/webstore/detail/mouse-tooltip-translator/hmigninkgibhdckiaphhmbgcghochdjc">https://chrome.google.com/webstore/detail/mouse-tooltip-translator/hmigninkgibhdckiaphhmbgcghochdjc</a></p>
         <h1><a id="user-content-DownThemAll" href="#DownThemAll"></a>DownThemAll!</h1>
-        <p><a href="https://chrome.google.com/webstore/detail/downthemall/nljkibfhlpcnanjgbnlnbjecgicbjkge</a></p>
+        <p><a href="https://chrome.google.com/webstore/detail/downthemall/nljkibfhlpcnanjgbnlnbjecgicbjkge">https://chrome.google.com/webstore/detail/downthemall/nljkibfhlpcnanjgbnlnbjecgicbjkge</a></p>
         <h1><a href="#auto-refresh-blocker"></a>Auto Refresh Blocker</h1>
         <p><a href="https://chrome.google.com/webstore/detail/auto-refresh-blocker/nmhmgghfmjjoejobimppckbalonobkck?hl=en" rel="nofollow">https://chrome.google.com/webstore/detail/auto-refresh-blocker/nmhmgghfmjjoejobimppckbalonobkck?hl=en</a></p>
         <h1><a id="user-content-autoplaystopper" href="#autoplaystopper"></a>AutoplayStopper</h1>
